objects/CMPL123__RAR_Child_Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__RAR_Target_Test_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RAR Target Test Object</label>
        <referenceTo>CMPL123__RAR_Target_Test_Object__c</referenceTo>
        <relationshipLabel>RAR Child Test Objects</relationshipLabel>
        <relationshipName>RAR_Child_Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RAR Child Test Object</label>
    <nameField>
        <label>RAR Child Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAR Child Test Objects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CMPL123__Record_Access_Rule_for_Testing__c</fullName>
        <label>Record_Access_Rule_for_Testing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>CMPL123__TWD_CBS_Sharing__c</fullName>
        <label>TWD Context-Based Security</label>
    </sharingReasons>
</CustomObject>